tests/base/parser/bad/stmts_t-match-spid-with-with.scilla
scilla_version 0

library TestLib

let a = True

contract Test
()

(* missing bar, | *)
transition arbitrary ()
  match a with
   _ => accept
  end
end
